Changed the submit button style

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </select>
         <div class="text8">Upload the Fee Recipt</div>
         <div class="upload"><input type="file"></div>
-        <div class="submit"><input type="submit"></div>
+        <input type="submit" id="submit">
         </form>
 </body>
 </html>
